demo/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-java
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-java
