demo/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-java
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sample-java
    weight: 100
